Setup on user screen and shared components adjustments

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,4 +47,6 @@ target 'apporganizador' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
 end
