Event list rendered

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,4 +49,6 @@ target 'apporganizador' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
 end
