--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
@@ -19,10 +20,13 @@
     "expo": "^37.0.0",
     "expo-cli": "^3.21.9",
     "expo-font": "~8.1.0",
+    "expo-linear-gradient": "^8.2.1",
     "expo-splash-screen": "^0.3.1",
     "expo-updates": "~0.2.1",
     "global": "^4.4.0",
+    "moment": "^2.27.0",
     "react": "16.9.0",
+    "react-devtools": "^4.7.0",
     "react-dom": "16.9.0",
     "react-native": "0.61.4",
     "react-native-axios": "^0.17.1",
