--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "react-dom": "16.9.0",
     "react-native": "0.61.4",
     "react-native-axios": "^0.17.1",
+    "react-native-chart-kit": "^6.2.3",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.8.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-walkthrough-tooltip": "^1.1.9",
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
