Financial screen finished

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,4 +51,6 @@ target 'apporganizador' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
 end
