--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-walkthrough-tooltip": "^1.1.9",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "^10.3.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
