--- a/ios/apporganizador/Info.plist
+++ b/ios/apporganizador/Info.plist
@@ -85,6 +85,10 @@
 		<string>CircularStd-MediumItalic.ttf</string>
 		<string>CircularStdBlack.ttf</string>
 		<string>CircularStd-Book.otf</string>
+		<string>la-brands-400.ttf</string>
+		<string>la-regular-400.ttf</string>
+		<string>la-solid-900.ttf</string>
+		<string>line-awesome.ttf</string>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
