--- a/package.json
+++ b/package.json
@@ -9,47 +9,47 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "@types/react-redux": "^7.1.9",
     "@use-expo/font": "^2.0.0",
     "eslint": "^7.3.0",
-    "expo": "^37.0.0",
-    "expo-cli": "^3.21.9",
-    "expo-font": "~8.1.0",
-    "expo-linear-gradient": "^8.2.1",
-    "expo-splash-screen": "^0.3.1",
-    "expo-updates": "~0.2.1",
+    "expo": "^38.0.0",
+    "expo-cli": "^3.22.1",
+    "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
+    "expo-updates": "~0.2.8",
     "global": "^4.4.0",
     "moment": "^2.27.0",
-    "react": "16.9.0",
+    "react": "16.11.0",
     "react-devtools": "^4.7.0",
-    "react-dom": "16.9.0",
-    "react-native": "0.61.4",
+    "react-dom": "16.11.0",
+    "react-native": "0.62.2",
     "react-native-axios": "^0.17.1",
     "react-native-chart-kit": "^6.2.3",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-svg": "^12.1.0",
-    "react-native-unimodules": "~0.8.1",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-sentry": "^0.43.2",
+    "react-native-svg": "12.1.0",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-walkthrough-tooltip": "^1.1.9",
-    "react-native-web": "^0.11.7",
-    "react-native-webview": "^10.3.2",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sentry-expo": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.22",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
@@ -64,7 +64,7 @@
     "jest": "~25.2.6",
     "prettier": "^2.0.5",
     "react-test-renderer": "~16.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "~3.9.5"
   },
   "jest": {
     "preset": "react-native"
